--- a/config/config.json
+++ b/config/config.json
@@ -1,23 +1,17 @@
 {
   "development": {
-    "username": "tkropp",
+    "username": "root",
     "password": null,
     "database": "flashcards_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
+    "use_env_variable": "JAWSDB_URL",
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+   "use_env_variable": "JAWSDB_URL",
+   "dialect": "mysql"
   }
 }
